// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Compliance /> renders Compliance correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Compliance
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details={null}
        message={null}
        state="LOADING_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Compliance /> renders Compliance in error state correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Compliance
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details={null}
        message="Error occured"
        state="ERROR_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Compliance /> renders Loading compliance correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Compliance
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <HealthBody
      className={null}
    >
      <HealthItem
        LoadingComponent={[Function]}
        details={null}
        message={null}
        state="LOADING_STATE"
      />
    </HealthBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Compliance /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Cluster Compliance
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-health__body"
    >
      <div
        class="kubevirt-health__item"
      >
        <div
          class="kubevirt-health__icon kubevirt-health__icon--ok"
        >
          <span
            aria-hidden="true"
            class="fa fa-check-circle"
          />
        </div>
        <div>
          <span
            class="kubevirt-health__text"
          >
            All nodes compliant
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
